tests/ui/unpretty/staged-api-invalid-path-108697.stderr
error: couldn't find file `$DIR/lol`
  --> $DIR/staged-api-invalid-path-108697.rs:8:1
   |
LL | mod foo;
   | ^^^^^^^^

error: aborting due to 1 previous error

